data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2083.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\99\80\80\80\00\01\03\65\6e"
    "\76\11\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63\74"
    "\69\6f\6e\00\00\03\82\80\80\80\00\01\01\0a\91\80"
    "\80\80\00\01\8b\80\80\80\00\00\41\01\04\40\10\00"
    "\0c\01\0b\0b"
  )
""
)